app/assets/stylesheets/home.scss
@font-face {
  font-family:'Dosis';
  src:font-url('Dosis.woff2') format('woff2'),
}

@font-face {
  font-family:'Helvetica';
  src:font-url('HelveticaNeue.ttc') format('ttc'),
}

.fa-search.v3-m-search{
  float: right;
  padding-top: 5px;
  font-size: 30px;
  margin-right: 30px;
  color: #182634;
}
.v3-close{
  width: 30px;
  height: 30px;
  border-radius: 20px;
  color: #FFD200;
  background: #111D4A;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 12px;
}

.v3-close p{
  margin: 0 !important;
}


.v3-m-nav{
  padding-top: 5px;
}

.panel.wod-panel{
  background: #DFE8EA !important;
}
.peegin-menu{
  width: 45px;
  height: 45px;
  background: #182634;
  color: #FFD200;
  border-radius: 50px;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  justify-content: center;
  -ms-align-items: center;
  align-items: center;
  font-size: 20px;
}

body{
  color: #4A4A4A !important;
  font-family: "Helvetica" !important;
  font-size: 16px !important;
  font-weight: 300 !important;
}

ul{
  margin-bottom: 0 !important;
}
h1{
  margin-top: 0 !important;
  color: #182634 !important;
}

hr{
  border-top: 1px solid #CFCFCF;
}

strong{
  color: #182634;
}


.container {
  width: 100%;
  max-width: 1270px !important;
}

.peegin-brand{
  height: 30vh;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  justify-content: center;
  -ms-align-items: center;
  align-items: center;
}

.brand-img > img{
  max-width: 243px;
  width: 80%;
}

.brand-img{
  text-align: center;
}

.panel-default{
  border-color: transparent !important;
}

.trending-pills{
  padding: 3px 10px;
  background: #28E2B7;
  color: #fff;
  border-radius: 12px;
  line-height: 1.45;
  margin-left:8px;
  font-family: "Dosis";
}

#floating-button{
  width: 55px;
  height: 55px;
  border-radius: 50%;
  background: #FF0000;
  position: fixed;
  bottom: 30px;
  right: 30px;
  cursor: pointer;
  box-shadow: 0px 2px 5px #666;
}

.plus{
  color: white;
  position: absolute;
  top: 0;
  display: block;
  bottom: 0;
  left: 0;
  right: -5px;
  text-align: center;
  padding: 0;
  margin: 0;
  line-height: 65px;
  font-family: 'Helvetica';
  font-weight: 300;
  animation: plus-out 0.3s;
  transition: all 0.3s;
}

#container-floating{
  position: fixed;
  width: 55px;
  height: 55px;
  bottom: 30px;
  right: 30px;
  z-index: 50px;
}

.helper-b.ed-btn{
  width: 100%;
  border: 1px solid #182634;
  background-color: #182634;
  border-radius: 12px;
}

.auth-user.helper-b.ed-btn{
  border: 1px solid #111D4A;
  background-color: #111D4A;
  padding: 12px 20px !important;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05), 0 1px 2px 0 rgba(0,0,0,0.05) !important;
}

.helper-b.ed-btn.opera-mini{
  background-color: #28E2B7;
  margin-top: 8px;
}

.side-panel.btn-nu{
  background-color: #182634;
  margin-bottom: 68px;
}

.navbared{

	min-height: 62px;
  padding: 13px 0;
	background-color: #28E2B7;
	padding-left: 15px;
	padding-right: 15px;

}
.side-info{
  margin-top: 20px;
  text-align: center;
  color: #999 !important;
  font-size: 14px !important;
}

.side-info > a, .side-info > strong {
  color: #999 !important;
}

.wod-side{
  margin-top: 70px;
}
.all-peegin{
	margin-top: 130px;
}
.altered{
	margin-top: 109px;
	margin-bottom: -100px;

}

.wod-main {
  background-color: #e4e8f1;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 12px;
  margin-left: -1px;
  margin-right: -1px;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05), 0 1px 2px 0 rgba(0,0,0,0.05) !important;
}

.wod-body{
  padding: 20px;
}
.app {
	border-top: 1px dashed #d7dce7;
	margin-top: 25px;
	margin-bottom: 25px;
}

.wod{
    margin-bottom: 10px;
}

#peegin_word_of_the_day {
    margin-right: 10px;
}
.wod-ul{
  border-top: 1px solid #d7dce7;
}
.alert-notice{
	background-color: #dff0d8;
	border-color: #d6e9c6;
	color: #3c763d;
}

.alert-alert{
	background-color: #f0d8d8;
	border-color: #e9c6c6;
	color: #763c3c;
}

.error-val{
	border: 1px solid #f0d8d8 ;
	border-radius: 4px;
	padding-bottom: 10px;
	padding-top: 10px;
}

div.col-sm-2{
	width: 10.2%;
}

.input-group{
	width: 83%;
	float: right;
	margin-top: -4px;
}

.search-mobile{
	width: 82%;
	margin-right: 40px;
}

.navbar-btn{

	margin-top: 3px;
	margin-bottom: 0px
}

.btns{

	margin-left: 10px;
}

.btn1{

	margin-right: 0px;
}

.side-bar,.titled{
	font-size: 26px;
  padding: 0 8px;
  border-radius: 5px;
	line-height:1.45;
	display: inline;
	font-family: 'Dosis';
}
#side,.titled{
	background-color: #FFD200;
}
.ui-mobile{
	float: right;
}

.heading{
	text-align: center;
	background-color: #FFD200;
  font-family: "Roboto";
	font-weight: 300;
	font-size: 25px;
	line-break: strict;
}

.helper-b{
	float: left;
	background-color: #182634;
	padding: 5px 10px !important;
	border: 1px solid #182634;
	border-radius: 4px;
}
.helper-b.btn2{
  font-size: 14px;
  text-align: center;
	padding: 9px;
  width: 100%;
	background: #3b5998;
	border: 1px solid #3b5998;
	color: #ffffff;

}

.ic{
  color: #182634;
}
.nu-ad{
  padding-top: 4px;
}
.ed{
  color: #FFD200;
}
.ed-btn{
  display: flex;
  justify-content: center;
}

button.close.mob {
	margin-bottom: 5px;
}

body{
	height: auto;
	background-color: #f1f1f1;
}

a {
	text-decoration: none !important;

	color: #28E2B7;

}

.button-link{

}

.create-peegin{
	background-color: #182634;
	margin-top: 10px;
	font-size: 1em;
	border-color: #182634;
}


.side-panel{
	background-color: #FFD200;
}
.described{
	font-size: 18px;
}
.exampled{

	font-style: italic;
}

.origin{
	color: #FFD200;
	font-style: italic;
	background-color: #182634;
	display: inline;
	padding: 8px;
	border-radius: 4px;
}

.views{
	color: #fff;
	font-style: italic;
	background-color: #28E2B7;
	display: inline;
	padding: 3px 8px;
	border-radius: 12px;
  margin-left: 20px
}

.panel{
	padding: 8px;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05), 0 1px 2px 0 rgba(0,0,0,0.05) !important;
  border-radius: 12px !important;
}

.socialed{
	display: flex;
	float: right;
	color: #182634;
  font-weight: 500;
}

.haterz{
	display: inline;
	float: left;
}


.hate{

	margin-left: -35px;
}

.score{
margin-left: 2px;
color: #28E2B7 !important;
}

.score-app{
margin-right: 8px;
color: #28E2B7 !important;
}

.modal-backdrop.in { z-index: auto;}

.modal-header{
	text-align: center;

}


.modal-title{

	color: #182634;
}


.btn-primary,.btn-default:hover {
	border-color: #3a434c;
	background-color: #3a434c;
}


input[type=text],[type=email],[type=password] {
    width: 100%;
    padding: 12px 20px;
		margin: 8px 0;
    box-sizing: border-box;
}

[type=email],[type=password] {
  border-radius: 12px;
  border: 1px solid #c1c1c1;
}

textarea.eg-h{
		height: 80px;
		margin: 0 0 20px 0;
    border-radius: 12px;
    border: 1px solid #c1c1c1;
    background: #fff;
}

input[type=text].tl-h,input[type=text].og-h{
	margin: 0 0 20px 0;
  border-radius: 12px;
  border: 1px solid #c1c1c1;
}

input[type=text].search-pad{
	padding: 5px 20px;
  border: none;
  border-radius: 12px;
  background: #fff;
  height: 45px;
}

input[type=text].search-pad::placeholder{
  text-align: center;
}

input[type=text].mn-h{
	margin: 0 0 20px 0;
  background: #fff;
}

.search-margin{
	margin: 8px;
  border-radius: 0 12px 12px;
  border: none;
  height: 45px;
}

.search-margin :hover{
  color: #FFD200;
}


textarea {
    width: 100%;
    height: 150px;
    padding: 12px 20px;
    box-sizing: border-box;
		margin: 0 0 20px 0;
    resize: none;
    border-radius: 12px;
    border: 1px solid #c1c1c1;
    background: #fff;
}

.devise-share{
	margin-top: 50px;
}

.dropdown-menu > li > a {
    color: #fff;
    border-bottom: 1px solid #28E2B7;
}

.dropdown-menu{
	right: -80px !important;
	left: auto;
	height: auto;
	min-width: 400px;
  min-height: 500px;
	text-align: center;
	border: 1px solid rgba(0, 0, 0, 0);
	padding: 150px 0;
  font-size: 30px;
	background-color: #182634;
  opacity: .95;
}

.mobile-drop{
	left: -80px;
	text-align: center;
	}

  .dropdown-menu.mobile-drop {
      padding: 80px 0;
  }

.pagination > .active > span {
	background-color: #28E2B7;
	border-color: #28E2B7;
}
.pagination{
	text-align: center;
}
.pagination > li > a {
	color: #28E2B7;
}

.pagination > li > a:hover {
color: #182634;
}

.pagination > .active > span, .pagination > .active > span:hover{
	background-color: #182634;
	border-color: #182634;
}

footer.page-footer {
	background: #182634;
	padding:30px 0 10px 0;
	color: #FFD200;
	width: 100%;
  margin-top:50px;
}
.center-footer{
	text-align: center;
	display: block;
	margin-top: -20px;
}
.copy-right {
	color: #FFD200;
}

.appstores{
  display: flex;
  justify-content: center;
}

.appstores > a {
  margin-right: 8px;
}


.show {
    margin-bottom: 190px;
}

// Tiny Phone

@media (max-width : 230px){
  .navbar-fixed-top{
    position: absolute;
  }
}

// Phone style

@media (max-width : 567px){
	.helper-b{
		font-size: 12px;
		padding: 4px;
	}

  .show {
      margin-bottom: 0px;
  }
}

// Mobile style

@media only screen and (max-width: 768px)
and (max-width : 982px){
  .socialed {
  	margin-top: -25px;
  }
  .side-panel.btn-nu{
    background-color: #28E2B7;
  }
	.views{
		font-size: 12px;
	}
	.search-mobile{
		width: 77% !important;
	}
  .show {
      margin-bottom: 0px;
  }
	.peegined{
		padding: 0;
	}
	.altered{
		margin-top: 120px;
		margin-bottom: -100px;

	}

  .helper-b.ed-btn{
    font-size: 14px;
    width: 100%;
    background-color: #111D4A;
  }
	.helper-b.btn2 {
    float: right;
}
	.navbar-fixed-top.sessions.new, .registrations.edit, .peegins.new, .registrations.new{
		position: absolute;
	}


	.navbared{
		padding: 13px;
	}

.side-panel .btn-nu{
      background-color: #182634;
}

.input-group.navbar-search{
  width: 80% !important;
}
}



// Tablet Starts here

@media (max-width : 991px){

  .helper-b.ed-btn{
    font-size: 14px;
    width: 100%;
    background-color: #111D4A;
  }

.side-panel.btn-nu{
  background-color: #28E2B7;
}
	.all-peegin {
  	margin-top: 80px;
  }
	.container.all-peegin{
		padding-left: 8px;
		padding-right: 8px;
	}

	.panel-body{
		padding: 20px;
	}
	.panel{
		margin-bottom: 5px;
		border-radius: 0px;
		margin-left: -1px;
		margin-right: -1px;
	}

	.panel.panel-default.peegined.peegins.show, .panel.panel-default.peegined.peegins.search,.panel.panel-default.peegined.peegins.new{
		margin-top: 0px;
	}

	.formed {
		padding-left: 0;
		padding-right: 0;
		margin-bottom: 100px;
	}
  .socialed {
  	margin-top: 0;
  }

	.signing{
		color: black;
	}

	.altered{
		margin-top: 81px;
		margin-bottom: -80px;

	}

	.search-mobile{
		width: 89%;
	}
	.center-footer{
		margin-top: 25px;
	}
	footer.page-footer {
	padding-left: 13px;
	padding-right: 13px;
	}
	.col-xs-12, .col-sm-12,.col-md-8 {
		padding-left: 0px;
		padding-right: 0px;
	}

  .input-group.navbar-search{
  	width: 80% !important;
  }
}

